--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "Stellar-Trail",
+  "name": "Stellar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "karma start karma.conf.js",
     "build": "webpack --mode development",
-    "start": "npm run build && webpack-dev-server --open --mode development",
-    "watch": "webpack --watch",
-    "lint": "eslint src/*.js"
-  },
-  "repository": {
-    "type": "git"
+    "start": "npm run build; webpack-dev-server --open --mode development",
+    "lint": "eslint src/*.js",
+    "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "keywords": [],
   "author": "",
-  "license": "",
-  "bugs": {
-    "url": ""
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "webpack": "^4.19.1"
   },
-  "homepage": "",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
-    "es6-promise-polyfill": "^1.2.0",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "html-webpack-plugin": "^3.0.6",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.99.0",
-    "karma": "^2.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.1",
@@ -44,12 +38,5 @@
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "dotenv-webpack": "^1.5.5",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "webpack": "4.19.1"
   }
 }
